FullSb1-27-apr-15/src/objects/Program__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Program Names</relationshipLabel>
        <relationshipName>Program_Names</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activation_Date__c</fullName>
        <description>Date that the program became or will become active.</description>
        <inlineHelpText>Date that the program became or will become active.</inlineHelpText>
        <label>Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Advisor__c</fullName>
        <label>Advisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Programs_By_Advisor_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Allowed__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Application Allowed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Fee_Lookup__c</fullName>
        <label>Application Fee Lookup</label>
        <referenceTo>Application_Fee_Merchant_Services__c</referenceTo>
        <relationshipLabel>Program Names</relationshipLabel>
        <relationshipName>Program_Names</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Fee__c</fullName>
        <formula>ROUND( Application_Fee_Lookup__r.Application_Fee__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Fee (in local currency</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Application_Initial_Review_Required__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether an initial review by an enrollment coach is required for applications to this program. If an initial review is not required, then the application should automatically be accepted upon receipt and verification of proper applicant history and credentials by operations.</description>
        <inlineHelpText>Whether an initial review by an enrollment coach is required for applications to this program. If an initial review is not required, then the application should automatically be accepted upon receipt and verification of proper applicant history.</inlineHelpText>
        <label>Application: Initial Review Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Initial_Reviewer__c</fullName>
        <label>Application: Initial Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Programs_By_Application_Initial_Reviewer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Initial_Screening_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Application: Initial Screening Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Second_Review_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether applicants to this program require that their applications undergo secondary review.</description>
        <inlineHelpText>Whether applicants to this program require that their applications undergo secondary review.</inlineHelpText>
        <label>Application: Second Review Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Second_Reviewer__c</fullName>
        <label>Application: Second Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Programs_By_Application_Second_Reviewer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campus__c</fullName>
        <label>Campus</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate__c</fullName>
        <description>Exam Fee Only</description>
        <inlineHelpText>Exam Fee Only</inlineHelpText>
        <label>Certificate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Concentration__c</fullName>
        <description>Descriptive name of the program concentration, if applicable.</description>
        <inlineHelpText>Descriptive name of the program concentration, if applicable.</inlineHelpText>
        <label>Concentration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmation_Deposit__c</fullName>
        <label>Confirmation Deposit</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Per_Credit_Hour__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cost Per Credit Hour</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Hours_Required__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Credit Hours Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Type__c</fullName>
        <label>Credit Type</label>
        <picklist>
            <picklistValues>
                <fullName>Quarter Hours</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Semester Hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deactivation_Date__c</fullName>
        <description>Date at which the program is no longer active.</description>
        <label>Deactivation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Degree__c</fullName>
        <label>Degree</label>
        <picklist>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEng</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PhD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Rich text long description used by Enrollment Counselors and Admissions Users in discussions with prospective students.</description>
        <inlineHelpText>Rich text long description used by Enrollment Counselors and Admissions Users in discussions with prospective students.</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Diploma_in_MDM_or_MFIN__c</fullName>
        <label>Diploma in MDM or MFIN</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Enrollment_Confirmation_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enrollment Confirmation Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enrollment_Counselor__c</fullName>
        <label>Enrollment Counselor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Programs_By_Enrollment_Counselor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entry_Point__c</fullName>
        <label>Entry Point</label>
        <picklist>
            <picklistValues>
                <fullName>Fall Quarter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winter Quarter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spring Quarter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer Quarter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fall Semester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spring Semester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer Semester</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimated_Tuition__c</fullName>
        <formula>Cost_Per_Credit_Hour__c * Credit_Hours_Required__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Tuition</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Years_To_Completion_FT__c</fullName>
        <label>Expected Years To Completion (FT)</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Years_To_Completion_PT__c</fullName>
        <label>Expected Years To Completion (PT)</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Finance_Element_2__c</fullName>
        <label>Finance Element 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Element_4__c</fullName>
        <label>Finance Element 4</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Element_6__c</fullName>
        <label>Finance Element 6</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Friendly_Name__c</fullName>
        <label>Friendly Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Code__c</fullName>
        <description>Code to identify package that needs to go out for prospect fulfillment.</description>
        <inlineHelpText>Code to identify package that needs to go out for prospect fulfillment.</inlineHelpText>
        <label>Fulfillment Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fully_Online__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fully Online?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_20_Compliant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the program is legally considered I-20 compliant.</description>
        <inlineHelpText>Whether the program is legally considered I-20 compliant.</inlineHelpText>
        <label>I-20 Compliant?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Installment_Plan_Fee__c</fullName>
        <label>Installment Plan Fee</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insurance_IEMBA_3m__c</fullName>
        <label>Insurance IEMBA 3m</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insurance_IEMBA_6m__c</fullName>
        <label>Insurance IEMBA 6m</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Integration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Integration ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsoCode__c</fullName>
        <formula>Country__r.IsoCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsoCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>January_2013_Start_Date__c</fullName>
        <label>January 2013 Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>January_2014_Start_Date__c</fullName>
        <label>January 2014 Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Undergraduate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctoral</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loan_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Loan Allowed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loan_Reviewer__c</fullName>
        <label>Loan: Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Programs_By_Loan_Reviewer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MIB_Project_Management_Specialization__c</fullName>
        <label>MIB-Project Management Specialization</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MIM_Digital_Marketing_Specialization__c</fullName>
        <label>MIM-Digital Marketing Specialization</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Major__c</fullName>
        <label>Major</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Months_Shanghai_Only__c</fullName>
        <label>Number of Months (Shanghai Only)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Program__c</fullName>
        <label>Parent Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Sub-Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pre_Master_Program_3_months__c</fullName>
        <label>Pre-Master Program (3 months)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Master_Program_6_mos__c</fullName>
        <label>Pre-Master Program (6 mos)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Master_Program_9_months__c</fullName>
        <label>Pre-Master Program (9 months)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Program_pre_Parsed__c</fullName>
        <description>VAlue in this Field is used in contact ,opportunity,finance etc to check pre parsed value.</description>
        <label>Program pre-Parsed</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <label>Provider</label>
        <picklist>
            <picklistValues>
                <fullName>Aetna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Erika</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Public_Url__c</fullName>
        <label>Public Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Recruitment_Priority__c</fullName>
        <description>Priority of the program for consideration in the admissions process. Lower numbers indicate higher priority (i.e., 0 = highest priority, 999 = lowest priority).</description>
        <inlineHelpText>Priority of the program for consideration in the admissions process. Lower numbers indicate higher priority (i.e., 0 = highest priority, 999 = lowest priority).</inlineHelpText>
        <label>Recruitment Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rotation_Deposit__c</fullName>
        <label>Rotation Deposit</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scholarship_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scholarship Allowed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scholarship_Reviewer__c</fullName>
        <label>Scholarship: Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Programs_By_Scholarship_Reviewer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>September_2012_Start_Date__c</fullName>
        <label>September 2012 Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>September_2013_Start_Date__c</fullName>
        <label>September 2013 Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>September_2014_Start_Date__c</fullName>
        <label>September 2014 Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shared_Twin_Annual__c</fullName>
        <label>Shared Twin (Annual)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shared_Twin_Monthly_Fee_Shanghai_Only__c</fullName>
        <label>Shared Twin Monthly Fee (Shanghai Only)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Single_6_months_visiting_Insurance__c</fullName>
        <label>Single 6 months (visiting)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Single_Annual__c</fullName>
        <label>Single (Annual)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Single_Child_Insurance__c</fullName>
        <label>Single &amp; Child</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Single_Insurance__c</fullName>
        <label>Single</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Single_Monthly_Fee_Shanghai_Only__c</fullName>
        <label>Single Monthly Fee (Shanghai Only)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Single_Spouse_2_Child_Insurance__c</fullName>
        <label>Single &amp; Spouse &amp; 2 Child</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Single_Spouse_Child_Insurance__c</fullName>
        <label>Single &amp; Spouse &amp; Child</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Single_Spouse_Insurance__c</fullName>
        <label>Single &amp; Spouse Insurance</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Six_Cards_App_Fee_Merchant_Id__c</fullName>
        <label>Six Cards App Fee Merchant Id</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Six_Cards_Merchant_ID__c</fullName>
        <label>Six Cards Merchant ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Six_Cards_Validation_Code__c</fullName>
        <label>Six Cards Validation Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialization_in_MDM_or_MFIN__c</fullName>
        <label>Specialization in MDM or MFIN</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Student_Resources_Activities__c</fullName>
        <label>Student Resources &amp; Activities</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toolbox_Case_Study_Pack__c</fullName>
        <label>Toolbox &amp; Case Study Pack</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tuition_Fee__c</fullName>
        <label>Tuition Fee</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UG_Analyst_Certificate__c</fullName>
        <label>UG Analyst Certificate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Program Name</label>
    <listViews>
        <fullName>All_Programs</fullName>
        <columns>NAME</columns>
        <columns>IsoCode__c</columns>
        <columns>Account__c</columns>
        <columns>Department__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Friendly_Name__c</columns>
        <columns>Campus__c</columns>
        <columns>Finance_Element_4__c</columns>
        <columns>Finance_Element_6__c</columns>
        <columns>Pre_Master_Program_3_months__c</columns>
        <columns>Pre_Master_Program_6_mos__c</columns>
        <columns>Insurance_IEMBA_3m__c</columns>
        <columns>Insurance_IEMBA_6m__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Confirmation_Deposit__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Programs</label>
    </listViews>
    <listViews>
        <fullName>EMBA</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>EMBA</value>
        </filters>
        <label>EMBA</label>
    </listViews>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Names</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>